<resources>
    <string name="app_name">DHBWorld</string>
    <string name="page_title">DHBWorld</string>
    <string name="more">more</string>
    <string name="content_description_more">show more information (contextual)</string>
    <string name="header_title">DHBWorld</string>
    <string name="header_text">The All-in-One DHBW app.</string>
    <string name="personal_information">Personal Information</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="edit">Edit</string>
    <string name="editbutton">editButton</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="default_notification_channel_id">userInteraction</string>
    <string name="still_accurate">Is this still accurate?</string>
    <string name="kantine">Cantine</string>
    <string name="Coffee">Coffee</string>
    <string name="Printer">Printer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="coffee_machine">Coffee machine</string>
    <string name="status">Status:</string>
    <string name="recent_reports">Recent reports: </string>
    <string name="moechten_sie_event_melden">Do you want to report the event?</string>
    <string name="sind_sie_sicher">Are you sure?</string>
    <string name="abbrechen">Cancel</string>
    <string name="problem_melden">Send report</string>
    <string name="danke_fuer_event">Thank you for contributing!</string>
    <string name="problem_still_there">Are you sure that the problem is solved?</string>
    <string name="problem_ist_geloest">Already solved</string>
    <string name="moechten_sie_melden_dass_der_drucker_kaputt_ist">Are you sure that the printer is broken?</string>
    <string name="event_notifications">Notifications about events. Coffee machine, printer etc.</string>
    <string name="problem_report">Report</string>
    <string name="thank_you">Thank you for contributing!</string>
    <string name="problem_is_solved">Already solved</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="informations_message">This application was developed by Christian Zäske, Daria Kodolova, Adrian Kohl and Linus Pust.
        \nThis is not an official application by the DHBW!
        \nThere is no guarantee for correctness.
        \nVersion number: %1$s
    </string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="maxCalendarHour">20</string>
    <string name="minCalendarHour">7</string>
    <string name="canteen">Canteen</string>
    <string name="previous_notifications">Previous notifications: %1$s</string>
    <string name="state">State: %1$s</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="time">%1$02d:%2$02d</string>
    <string name="error_getting_kvv_data">Error while fetching data</string>
    <string name="departure_time">Departure time</string>
    <string name="departure_date">Departure date</string>
    <string name="search">Search</string>
    <string name="marker_destination">Marker Destination</string>
    <string name="title_activity_cantine">CantineActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cantine">Cantine</string>
    <string name="new_grade_exam">New exam grade</string>
    <string name="new_grade_exam_text">
        A new grade is available!
        \n%1$s: %2$s
    </string>
    <string name="new_grade_final">New final grade</string>
    <string name="new_grade_final_text">
        A new grade is available!
        \n%1$s: %2$s
    </string>
    <string name="dualis">Dualis</string>
    <string name="wrong_credentials">E-Mail or password incorrect</string>
    <string name="semester">Semester</string>
    <string name="refresh">Refresh</string>
    <string name="authentication_expired">Credentials expired</string>
    <string name="authentication_expired_expl">Maybe you have changed the password? Please log in to the app again.</string>
    <string name="channel_name_general_dualis">Dualis Info</string>
    <string name="channel_description_general_dualis">General information about Dualis</string>
    <string name="channel_name_dualis">New grade (Dualis)</string>
    <string name="channel_description_dualis">Notification for new grades (Dualis)</string>
    <string name="total_gpa">Overall GPA:</string>
    <string name="major_gpa">Major GPA:</string>
    <string name="total_credits">Credits:</string>
    <string name="values_credits">%1$s / %2$s</string>
    <string name="tram_departure">Tram departure</string>
    <string name="user_interaction">User Interaction</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="organizer">Organizer</string>
    <string name="biometrics">Biometrics</string>
    <string name="biometrics_summary">Use biometric sensors to log into Dualis.</string>
    <string name="check_new_grades">Checking for new grades</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="e_mail_adresse">E-Mail address</string>
    <string name="login_speichern">save login</string>
    <string name="login">Login</string>
    <string name="map">Map</string>
    <string name="room">Room</string>
    <string name="entry">Entrance</string>
    <string name="show_route">Show route</string>
    <string name="optional_password">(Optional) Password</string>
    <string name="optional_repeat_password">(Optional) Repeat password</string>
    <string name="export_backup_helptext">The Backup contains all settings, the calendar, personal information and optionally the dualis login. Additionally the backup can be encrypted.</string>
    <string name="export_dualis">Export dualis login</string>
    <string name="blackboard">Blackboard</string>
</resources>