<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:title="@string/home" />
        <item
            android:id="@+id/personalInformation"
            android:title="@string/personal_information" />
        <item
            android:id = "@+id/Calendar"
            android:title = "@string/calendar" />
        <item
            android:id = "@+id/UserInteraction"
            android:title = "@string/user_interaction" />

        <item
            android:id="@+id/tram_departure"
            android:title="@string/tram_departure" />
        <item
            android:id="@+id/cantine"
            android:title="@string/cantine"/>

        <item
            android:id="@+id/dualis"
            android:title="@string/dualis" />
        <item
            android:id="@+id/organizer"
            android:title="@string/organizer"/>

        <item
            android:id="@+id/map"
            android:title="@string/map"/>
        <item
            android:id="@+id/blackboard"
            android:title="@string/blackboard"/>
    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id = "@+id/Settings"
            android:title="@string/settings" />

    </group>
</menu>