<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingBottom="28dp"
            android:paddingTop="16dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_backup_helptext"
                android:layout_marginBottom="8dp"/>

            <CheckBox
                android:id="@+id/dualis_export_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_dualis" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/backupPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optional_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/backupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/backupPasswordRepeatLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optional_repeat_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/backupPasswordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>