<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Benachrichtigungseinstellungen">

        <SwitchPreference
            app:defaultValue="true"
            app:key="notifications_mensa"
            app:title="Benachrichtigungen Mensa"

            />
        <SwitchPreference
            app:defaultValue="true"
            app:key="notifications_coffee"
            app:title="Benachrichtigungen Kaffeemaschine"

            />
        <SwitchPreference
            app:defaultValue="true"
            app:key="notifications_printer"
            app:title="Benachrichtigungen Drucker" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="Dualis" >

        <SwitchPreference
            app:key="useBiometrics"
            app:title="@string/biometrics"
            app:defaultValue="false"
            app:summary="@string/biometrics_summary"
            app:icon="@drawable/ic_baseline_fingerprint_24"/>

        <SwitchPreference
            app:key="sync"
            app:title="Benachrichtigungen"
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_notifications_active_24"/>

        <ListPreference
            app:dependency="sync"
            app:defaultValue="15"
            app:entries="@array/sync_entries"
            app:entryValues="@array/sync_values"
            app:key="sync_time"
            app:title="@string/check_new_grades"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_baseline_access_time_24" />

        <Preference
            app:key="customize_notification"
            app:title="Benachrichtigungen anpassen"
            app:icon="@drawable/ic_baseline_brush_24" />


    </PreferenceCategory>

    <PreferenceCategory app:title="Über">

        <Preference
            app:key="informations"
            app:title="Informationen über DHBWorld" />
        <Preference
            app:key="licenses"
            app:title="Lizenzen" />
        <Preference
            app:key="dataprivacy"
            app:title="Datenschutz" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Calendar">
        <Preference
        app:key="calendarURL"
        app:title="Import from URL" />
    </PreferenceCategory>

</PreferenceScreen>